--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <button onclick="showSection('galeria')">Galeria de Criações</button>
     <button onclick="showSection('santuario')">Santuário</button>
     <button onclick="showSection('projetos')">Laboratório de Projetos</button>
+     <a href="acidos.html"><i class="fas fa-atom"></i> acidos</a>
   </nav>
   <main>
     <section id="diario" class="active">
